# serverless

./: README.md  main.tf
k8s/: domain-mapping.yaml  hello-world-service.yaml  whatisit-service.yaml
whatisit/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
whatisit/src/: main.rs  model.rs
