[package]
name = "whatisit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", features = [] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", features = [] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", features = [] }
image = "0.24.9"
safetensors = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
